; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_can_begin_data_capture.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_can_begin_data_capture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_output = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_output*, i32, i32, i32, i32)* @can_begin_data_capture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @can_begin_data_capture(%struct.obs_output* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.obs_output*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.obs_output* %0, %struct.obs_output** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %32

14:                                               ; preds = %5
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %14
  %18 = load %struct.obs_output*, %struct.obs_output** %7, align 8
  %19 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17
  store i32 0, i32* %6, align 4
  br label %52

23:                                               ; preds = %17
  br label %31

24:                                               ; preds = %14
  %25 = load %struct.obs_output*, %struct.obs_output** %7, align 8
  %26 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %24
  store i32 0, i32* %6, align 4
  br label %52

30:                                               ; preds = %24
  br label %31

31:                                               ; preds = %30, %23
  br label %32

32:                                               ; preds = %31, %5
  %33 = load i32, i32* %10, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %42

35:                                               ; preds = %32
  %36 = load %struct.obs_output*, %struct.obs_output** %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = call i32 @audio_valid(%struct.obs_output* %36, i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %35
  store i32 0, i32* %6, align 4
  br label %52

41:                                               ; preds = %35
  br label %42

42:                                               ; preds = %41, %32
  %43 = load i32, i32* %11, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %51

45:                                               ; preds = %42
  %46 = load %struct.obs_output*, %struct.obs_output** %7, align 8
  %47 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %51, label %50

50:                                               ; preds = %45
  store i32 0, i32* %6, align 4
  br label %52

51:                                               ; preds = %45, %42
  store i32 1, i32* %6, align 4
  br label %52

52:                                               ; preds = %51, %50, %40, %29, %22
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}

declare dso_local i32 @audio_valid(%struct.obs_output*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
